k8s/prod.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: website
    namespace: app
    labels:
        app: website
spec:
    replicas: 3
    selector:
        matchLabels:
            app: website
    template:
        metadata:
            labels:
                app: website
        spec:
            terminationGracePeriodSeconds: 30
            imagePullSecrets:
                - name: regcred
            containers:
                - name: website
                  image: harbor.disembark.dev/7tv/website:${IMAGE_TAG}
                  imagePullPolicy: Always
                  livenessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 30
                      timeoutSeconds: 5
                      periodSeconds: 10
                      successThreshold: 1
                      failureThreshold: 6
                  readinessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 5
                      timeoutSeconds: 5
                      periodSeconds: 10
                      successThreshold: 1
                      failureThreshold: 6
                  ports:
                      - name: http
                        containerPort: 3000
                  resources:
                      requests:
                          memory: "500Mi"
                          cpu: "500m"
                      limits:
                          memory: "1Gi"
                          cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
    name: website
    namespace: app
spec:
    selector:
        app: website
    ports:
        - port: 3000
          name: http
          targetPort: http
