k8s/staging.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: website
    namespace: app
    labels:
        app: website
spec:
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: website
    template:
        metadata:
            labels:
                app: website
        spec:
            terminationGracePeriodSeconds: 30
            containers:
                - name: website
                  image: ${IMAGE}
                  imagePullPolicy: Always
                  livenessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 1
                      timeoutSeconds: 1
                      periodSeconds: 3
                      successThreshold: 1
                      failureThreshold: 12
                  readinessProbe:
                      httpGet:
                          path: /
                          port: http
                      initialDelaySeconds: 1
                      timeoutSeconds: 1
                      periodSeconds: 2
                      successThreshold: 1
                      failureThreshold: 12
                  ports:
                      - name: http
                        containerPort: 3000
                  resources:
                      requests:
                          memory: "500Mi"
                          cpu: "500m"
                      limits:
                          memory: "1Gi"
                          cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
    name: website
    namespace: app
spec:
    selector:
        app: website
    ports:
        - port: 3000
          name: http
          targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: website
    namespace: app
    annotations:
        kubernetes.io/ingress.class: nginx
        external-dns.alpha.kubernetes.io/hostname: 7tv.dev
        external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
    rules:
        - host: 7tv.dev
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: website
                            port:
                                name: http
    tls:
        - hosts:
              - 7tv.dev
          secretName: 7tv-dev-tls
